<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2"
    tools:context=".Activities.AddAssessmentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:id="@+id/title_input_row">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_input_label"
            android:labelFor="@id/title_input"
            android:textSize="20sp"
            android:textColor="#000"
            android:gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp" />
        <EditText
            android:id="@+id/title_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:id="@+id/type_input_row"
        android:layout_below="@id/title_input_row">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/type_label"
            android:labelFor="@id/type_spinner"
            android:textSize="20sp"
            android:textColor="#000"
            android:gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp" />
        <Spinner
            android:id="@+id/type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:id="@+id/due_input_row"
        android:layout_below="@id/type_input_row">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/due_date_label"
            android:labelFor="@id/due_input"
            android:textSize="20sp"
            android:textColor="#000"
            android:gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp" />
        <EditText
            android:id="@+id/due_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/date_format"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/due_input_row"
        android:text="@string/goal_date_heading"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:textColor="#000"
        android:id="@+id/goal_date_heading"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/goal_date_heading"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:id="@+id/goal_date_headings">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".9"
            android:text="@string/description_heading"
            android:textColor="#000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".9"
            android:text="@string/date_heading"
            android:textColor="#000" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/edit_heading"
            android:textColor="#000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete_heading"
            android:textColor="#000"/>
    </LinearLayout>

    <ListView
        android:id="@+id/list_view_goal_dates"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_below="@id/goal_date_headings"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_view_goal_dates"
        android:text="@string/add_goal_date_button"
        android:id="@+id/button_add_goal_date"/>
</RelativeLayout>