<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/mentor_list_row">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".95"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mentor_list_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".95"
            android:gravity="center_vertical"
            android:text="@string/course_mentors_name_heading" />

        <TextView
            android:id="@+id/mentor_list_phone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".95"
            android:gravity="center_vertical"
            android:text="@string/course_mentors_phone_heading" />

        <TextView
            android:id="@+id/mentor_list_email"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".95"
            android:gravity="center_vertical"
            android:text="@string/course_mentors_email_heading" />
    </LinearLayout>

</LinearLayout>