<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2"
    tools:context=".Activities.NoteActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_hint"
        android:id="@+id/note_input"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/note_input"
        android:text="@string/note_add"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/note_button"
        android:onClick="addNoteClick"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_title"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_below="@id/note_button"
        android:textSize="25sp"
        android:textColor="#000"
        android:gravity="center_horizontal"
        android:id="@+id/note_title"/>

    <ListView
        android:id="@+id/list_view_notes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_below="@id/note_title"/>

</RelativeLayout>